fix: update environment variables in docker-compose and Makefile for better compatibility

--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ DB_DATABASE=gerenciador_financeiro
 MONGO_ROOT_USER=admin
 MONGO_ROOT_PASSWORD=adminpassword123
 MONGO_DB=gerenciador_logs
-MONGODB_URI=mongodb://admin:adminpassword123@mongodb:27017/gerenciador_logs?authSource=admin
+MONGO_URI=mongodb://admin:adminpassword123@mongodb:27017/gerenciador_logs?authSource=admin
 
 # ================================
 # CONFIGURAÇÃO JWT
