--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,6 +1,60 @@
+# Redirecionamento HTTP para HTTPS
 server {
     listen 80;
-    server_name localhost;
+    server_name controle-financeiro.gaius.digital;
+
+    # Let's Encrypt ACME Challenge
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        try_files $uri $uri/ =404;
+    }
+
+    # Health check endpoint (mantém em HTTP)
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
+    }
+
+    # Redirecionar todo o resto para HTTPS
+    location / {
+        return 301 https://$server_name$request_uri;
+    }
+}
+
+# Configuração HTTPS
+server {
+    listen 443 ssl;
+    http2 on;
+    server_name controle-financeiro.gaius.digital;
+
+    # Certificados SSL
+    ssl_certificate /etc/letsencrypt/live/controle-financeiro.gaius.digital/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/controle-financeiro.gaius.digital/privkey.pem;
+
+    # Configurações SSL modernas e seguras
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_ciphers ECDHE-RSA-AES256-GCM-SHA512:DHE-RSA-AES256-GCM-SHA512:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-SHA384;
+    ssl_ecdh_curve secp384r1;
+    ssl_prefer_server_ciphers off;
+
+    # SSL session cache is configured globally in nginx.conf
+
+    # OCSP Stapling
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    ssl_trusted_certificate /etc/letsencrypt/live/controle-financeiro.gaius.digital/chain.pem;
+
+    # Resolver DNS (use o DNS do seu servidor)
+    resolver 8.8.8.8 8.8.4.4 valid=300s;
+    resolver_timeout 5s;
+
+    # Headers de segurança SSL
+    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
+    add_header X-Frame-Options SAMEORIGIN always;
+    add_header X-Content-Type-Options nosniff always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
 
     # Tamanho máximo de upload
     client_max_body_size 10M;
@@ -15,6 +69,7 @@ server {
     proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header X-Forwarded-Host $server_name;
 
     # Health check endpoint
     location /health {
@@ -102,6 +157,6 @@ server {
     }
 
     # Logs específicos
-    access_log /var/log/nginx/gerenciador.access.log main;
-    error_log /var/log/nginx/gerenciador.error.log;
+    access_log /var/log/nginx/gerenciador-ssl.access.log main;
+    error_log /var/log/nginx/gerenciador-ssl.error.log;
 }
