--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -131,6 +131,12 @@ services:
       - nginx_logs:/var/log/nginx
       - certbot_certs:/etc/letsencrypt:ro
       - certbot_www:/var/www/certbot:ro
+    healthcheck:
+      test: ["CMD", "/usr/local/bin/healthcheck.sh"]
+      interval: 30s
+      timeout: 15s
+      retries: 5
+      start_period: 60s
 
   # Certbot para SSL/TLS certificates
   certbot:
