--- a/nginx/conf.d/http-only.conf.template
+++ b/nginx/conf.d/http-only.conf.template
@@ -1,14 +1,7 @@
 # Configuração HTTP-only para obtenção de certificados SSL
 # Este arquivo é usado temporariamente durante o processo de certificação
 # Nota: Deve ser usado quando default.conf está desabilitado
-
-upstream api_backend {
-    server api:3000;
-}
-
-upstream web_backend {
-    server web:4200;
-}
+# Os upstreams api_backend e web_backend já estão definidos no nginx.conf
 
 server {
     listen 80;
